--- a/automl.ipynb
+++ b/automl.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En la presente notebook se propuso comparar la búsqueda del mejor modelo y sus hiperparámetros realizada de forma manual y utilizando Auto-Pythorch. Para ello, se utilizó la base de datos disponibles de la [competencia de Kaggle realizada para la materia \"Aprendizaje Supervisado\"](https://www.kaggle.com/c/diplodatos-travel-insurance-prediction-data/overview) en donde el objetivo era predecir si un cliente contrata un seguro de viajes y obtener el mayor valor de F1 para la clase positiva.\n",
+    "En la presente notebook se propuso comparar la búsqueda del mejor modelo y sus hiperparámetros realizada de forma manual y utilizando Auto-Pytorch. Para ello, se utilizó la base de datos disponibles de la [competencia de Kaggle realizada para la materia \"Aprendizaje Supervisado\"](https://www.kaggle.com/c/diplodatos-travel-insurance-prediction-data/overview) en donde el objetivo era predecir si un cliente contrata un seguro de viajes y obtener el mayor valor de F1 para la clase positiva.\n",
     "\n",
     "Cargamos la base de datos y las librerías necesarias."
    ]
@@ -689,6 +689,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se realiza la búsqueda del mejor modelo e hiperparámetros utilizando Auto-Pytorch. Para mas información consultar [aquí](https://arxiv.org/pdf/2006.13799.pdf)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -848,8 +855,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "En la siguiente captura de pantalla se muestra el Private Score y Public Score para la búsqueda del mejor modelo de forma manual y con Auto-Pytorch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![kaggle scores](scores.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusiones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
